--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "mime-types": "^2.1.35",
     "mongoose": "^7.5.2",
     "nodemon": "^3.0.1"
   }
