--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-fileupload": "^1.4.0",
     "mime-types": "^2.1.35",
     "mongoose": "^7.5.2",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1"
   }
 }
